syntax = "proto3";

package anki.sqlite;

option java_generic_services = true;

// We expect in Java: Null, String, Short, Int, Long, Float, Double, Boolean, Blob (unused)
// We get: DbResult (Null, String, i64, f64, Vec<u8>), which matches SQLite documentation

message SqlValue {
    oneof Data {
        string stringValue = 1;
		int64 longValue = 2;
		double doubleValue = 3;
		bytes blobValue = 4;
    }
}

message Row {
	repeated SqlValue fields = 1;
}

message DbResult {
	repeated Row rows = 1;
}

message DBResponse {
	DbResult result = 1;
	int32 sequenceNumber = 2;
	int32 rowCount = 3;
	int64 startIndex = 4;
}