syntax = "proto3";

package BackendProto;

option java_generic_services = true;

// We expect in Java: Null, String, Short, Int, Long, Float, Double, Boolean, Blob (unused)
// We get: DBResult (Null, String, i64, f64, Vec<u8>), which matches SQLite documentation

message SqlValue {
    oneof Data {
        string stringValue = 1;
		int64 longValue = 2;
		double doubleValue = 3;
		bytes blobValue = 4;
    }
}

message Row {
	repeated SqlValue fields = 1;
}

message DBResult {
	repeated Row rows = 1;
}

message DBResponse {
	DBResult result = 1;
	int32 sequenceNumber = 2;
}